@@ -1,3 +1,8 @@
+2004-09-13  John Gardiner Myers  <jgmyers@proofpoint.com>
+
+	* process.c (input_func): Process detach makes the input channel
+	unreadable.  (Fixes #64690)
+
 2004-09-10  John Gardiner Myers  <jgmyers@proofpoint.com>
 
 	* process.c (process_duplicate): Don't try to copy NULL block table.
